src/test/ui/issues/issue-28971.stderr
error[E0599]: no variant or associated item named `Baz` found for enum `Foo` in the current scope
  --> $DIR/issue-28971.rs:7:18
   |
LL | enum Foo {
   | -------- variant or associated item `Baz` not found here
...
LL |             Foo::Baz(..) => (),
   |                  ^^^
   |                  |
   |                  variant or associated item not found in `Foo`
   |                  help: did you mean `Bar`? (a similarly named variant)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
